--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,2 +1,15 @@
-@import "tailwindcss";
-@import "@nuxt/ui-pro";
+@import "tailwindcss" theme(static);
+@import "@nuxt/ui";
+
+@theme {
+--container-8xl: 100%;
+}
+
+:root {
+--ui-container: var(--container-8xl);
+}
+
+.text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
+}
